--- a/OnlineShoppingPlatform/ShoppingWeb/package.json
+++ b/OnlineShoppingPlatform/ShoppingWeb/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --configuration development",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/node": "^24.0.3",
     "bootstrap": "^5.3.7",
     "rxjs": "~7.5.0",
