--- a/OnlineShoppingPlatform/appsettings.json
+++ b/OnlineShoppingPlatform/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Shopping": "server=localhost\\SQLEXPRESS;database=shopping;trusted_connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "99757610662-24q2qp2f765imfqrjot547lqmuds931m.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
+  "Jwt": {
+    "Key": "cSTk54lzOAUTafjq8fapaaBezvluWZks/+cqN9RQHpY=",
+    "Issuer": "http://localhost:25507",
+    "Audience": "http://localhost:25507"
   }
 }
