Add ID encryption utilities

--- a/OnlineShoppingPlatform/appsettings.json
+++ b/OnlineShoppingPlatform/appsettings.json
@@ -19,5 +19,9 @@
     "Key": "cSTk54lzOAUTafjq8fapaaBezvluWZks/+cqN9RQHpY=",
     "Issuer": "http://localhost:25507",
     "Audience": "http://localhost:25507"
+  },
+  "EncryptionSettings": {
+    "Key": "6ZyuuRKEmoywb40jyNZSwKa7ammby4ziBOWn/3Yqlyk=",
+    "IV": "WXViSWAMNaYxmUoPctNgzg=="
   }
 }
