--- a/OnlineShoppingPlatform.Infrastructure/OnlineShoppingPlatform.Infrastructure.csproj
+++ b/OnlineShoppingPlatform.Infrastructure/OnlineShoppingPlatform.Infrastructure.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.6" />
   </ItemGroup>
 
 </Project>
