--- a/OnlineShoppingPlatform.Orders/OnlineShoppingPlatform.Orders.csproj
+++ b/OnlineShoppingPlatform.Orders/OnlineShoppingPlatform.Orders.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OnlineShoppingPlatform.Cart\OnlineShoppingPlatform.Carts.csproj" />
     <ProjectReference Include="..\OnlineShoppingPlatform.Infrastructure\OnlineShoppingPlatform.Infrastructure.csproj" />
     <ProjectReference Include="..\OnlineShoppingPlatform.Products\OnlineShoppingPlatform.Products.csproj" />
   </ItemGroup>
