--- a/OnlineShoppingPlatform/appsettings.json
+++ b/OnlineShoppingPlatform/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Shopping": "server=localhost\\SQLEXPRESS;database=shopping;trusted_connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "Shopping": "server=localhost\\SQLEXPRESS;database=shopping;trusted_connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "Redis": "localhost:6379"
   },
   "Authentication": {
     "Google": {
